# src/main/java/org/kshrd/hrdroomservice/api/dto/auth/LogoutRequest.java
@@ -1,5 +1,0 @@
-package org.kshrd.hrdroomservice.api.dto.auth;
-
-import jakarta.validation.constraints.NotBlank;
-
-public record LogoutRequest(@NotBlank String refreshToken) {}
