# src/main/java/org/kshrd/hrdroomservice/api/dto/auth/RefreshTokenRequest.java
@@ -1,5 +1,0 @@
-package org.kshrd.hrdroomservice.api.dto.auth;
-
-import jakarta.validation.constraints.NotBlank;
-
-public record RefreshTokenRequest(@NotBlank String refreshToken) {}
