# src/main/java/org/kshrd/hrdroomservice/api/dto/auth/RegisteredUserResponse.java
@@ -1,4 +1,0 @@
-package org.kshrd.hrdroomservice.api.dto.auth;
-
-public record RegisteredUserResponse(
-        String userId, String username, String email, String firstName, String lastName) {}
